--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ img {
 .App {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   justify-content: center;
 }
