--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.screen-reader-text {
+  border-radius: 3px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  word-wrap: normal !important;
+}
+
+.screen-reader-text:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  clip: auto !important;
+  display: block;
+  height: auto;
+  width: auto;
+  top: 5px;
+  left: 5px;
+  padding: 0.5em 1em;
+  color: #fefefe;
+  font-size: inherit;
+  font-weight: bold;
+  line-height: normal;
+  text-decoration: none;
+  z-index: 100000;
+}
